--- a/src/Components/CardGrid.css
+++ b/src/Components/CardGrid.css
@@ -1,5 +1,6 @@
 .card-grid {
   position: relative;
+  border-radius: 8px;
 }
 .card-grid-image {
   position: absolute;
@@ -7,10 +8,13 @@
   right: 24px;
 }
 .card-grid-text {
-  color: #fff;
-  font-family: "Plus Jakarta Sans", sans-serif;
+  font-family: "Plus Jakarta Sans";
+  font-style: normal;
   font-weight: 700;
+  font-size: 24px;
   line-height: 30px;
+  color: white;
   bottom: 24px;
   left: 24px;
+  position: absolute;
 }
