--- a/src/index.css
+++ b/src/index.css
@@ -27,9 +27,15 @@ body {
   font-family: "Plus Jakarta Sans";
   font-style: normal;
   font-weight: 500;
-  font-size: 18px;
+  font-size: 16px;
   line-height: 26px;
   color: #7a746e;
+}
+@media screen and (min-width: 768px) {
+  .bodyM {
+    font-size: 18px;
+    line-height: 28px;
+  }
 }
 body {
   padding: 15px;
